# chatbot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  chatbot.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/voice_assistant/: __init__.py  __main__.py  assistant.py  cli.py  config.py
tests/: __init__.py  conftest.py  test_assistant.py  test_cli.py  test_config.py  test_integration.py
