[project]
name = "voice-assistant-demo"
version = "0.1.0"
description = "Microphone-driven assistant demo that integrates speech recognition, OpenAI responses, and gTTS playback."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Voice Assistant Maintainers"}
]
dependencies = [
    "openai>=1.12.0,<2.0.0",
    "SpeechRecognition>=3.10.0,<4.0.0",
    "PyAudio>=0.2.14",
    "gTTS>=2.5.0,<3.0.0",
    "playsound==1.3.0",
]

[project.scripts]
voice-assistant = "chatbot:main"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
